--- a/mechanics.ipynb
+++ b/mechanics.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Mechanics \n",
-    "Coupled oscillators"
+    "Coupled oscillators $m=f$"
    ]
   },
   {
