--- a/oscilador.ipynb
+++ b/oscilador.ipynb
@@ -296,7 +296,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rhs_oscillator()"
+    "def rhs_oscillator(t, X, m, k):\n",
+    "    x, v\n",
+    "    dx_dt = v\n",
+    "    dv_dt = -k/m*x\n",
+    "    return [dx_dt, dv_dt]"
    ]
   }
  ],
@@ -316,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
